feat: 完成 pointId 迁移 P2–P4，首页与复盘页改用 family 统计
读取/展示/RAG 路径统一走 pointId 与语法 family 聚合，复盘页饼图与统计卡布局同步优化。